--- a/index.html
+++ b/index.html
@@ -156,5 +156,6 @@
       }
     };
   </script>
+<script type='text/javascript' src='//pl28030600.effectivegatecpm.com/3a/39/2e/3a392ef12ec9411fdf1fcc8c22f2cc9d.js'></script>
 </body>
 </html>
