--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Rater Tara App ১৮+</title>
+  <title>Rater Tara App </title>
 
   <!-- User SDK -->
   <script src='//libtl.com/sdk.js' data-zone='10095516' data-sdk='show_10095516'></script>
@@ -156,6 +156,5 @@
       }
     };
   </script>
-<script type='text/javascript' src='//pl28030600.effectivegatecpm.com/3a/39/2e/3a392ef12ec9411fdf1fcc8c22f2cc9d.js'></script>
 </body>
 </html>
