--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ body {
     <p>Welcome to the 🧋🂱 𝐑𝐀𝐓𝐄𝐑 𝐓𝐀𝐑𝐀<br>👉 শেয়ার করুন এবং ১ সেকেন্ডে Unlock নিন!</p>
 </div>
 
-<button class="btn btn-primary pulse" id="btnRater">ratertara.com</button>
-<button class="btn btn-secondary" id="btnVideo">video.com</button>
+<button class="btn btn-primary pulse" id="btnRater">𝐔𝐧𝐥𝐨𝐜𝐤</button>
+<button class="btn btn-secondary" id="btnVideo">𝐕𝐢𝐝𝐞𝐨</button>
 
 <div class="progress-box">
     <div class="progress-fill" id="progressFill"></div>
@@ -160,8 +160,8 @@ const config = {
     username: "@ratertara_bot",
     profilePic: "https://blogger.googleusercontent.com/img/a/AVvXsEiHs7jxhHgQhWk9ETQg1SouCcPMC_zP8NxCZVXzUgCzvuQntzBLnkLrAKPWKNfGZko-cwkL6TyB0OeiN8CvxigjpFsrpSs3BoQki8fa7MztE3YfSaJgzQV8DRb-lh0VHzbSLIlEQiMkQ6CI79k3-KYywUTOzPJgm4stE-Z7U4Fj7W08ZAKDnjx6GrQd31I=s395",
 
-    btn1: { text:"ratertara.com", link:"https://t.me/share/url?url=https://t.me/ratertara_bot&text=🚀" },
-    btn2: { text:"video.com", link:"https://t.me/+x7CPJm_Otcs2MmQ1" },
+    btn1: { text:"𝐔𝐧𝐥𝐨𝐜𝐤", link:"https://t.me/share/url?url=https://t.me/ratertara_bot&text=🚀" },
+    btn2: { text:"𝐕𝐢𝐝𝐞𝐨", link:"https://t.me/+x7CPJm_Otcs2MmQ1" },
 
     required: 5
 };
